--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -25,7 +25,7 @@
             <button> Search </button>
         </form>
         <p id="message-1"></p>
-        <p id="message-2"></p>
+        <div id="message-2"></div>
     </div>
     {{>footer}}
 
